# regina

./: .gitignore  LICENSE  MANIFEST.in  README.md  _regina.compdef.zsh  database.uxf  default.conf  ip2nation.db  ip2nation.sql  pyproject.toml  regina.1.man  regina.1.md  server_datenbank.uxf  setup.py  template.html
regina/: __init__.py  collect.py  database.py  default.cfg  generated-default.cfg  main.py  regina.py  settings_manager.py  sql_util.py  template.html  test.db  todo.py  visualize.py
regina/data_collection/: __init__.py  parse_log.py  request.py
regina/data_visualization/: __init__.py  history.py  ranking.py  utility.py  visualize.py
regina/db_operation/: __init__.py  collect.py  database.py  request.py  visualize.py
regina/package-data/: default.cfg  template.html
regina/sql/: city_ranking.sql  country.sql  create_db.sql
regina/utility/: __init__.py  config.py  globals.py  settings_manager.py  sql_util.py  utility.py
test/: test.db
